# kosu-lang

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  dune-project  float.s  hello  helloworl.S  kosu-lang.opam  kosu-lang.opam.template  kosu_lang.opam  kosu_lang.opam.template  kosuc_debug  size
doc/: Builtin.md  Control-Flow.md  Function.md  Readme.md  Type.md
examples/game-of-life/: cio.kosu  main.kosu  option.kosu  vector.kosu
examples/mini-std/: result.kosu  sys.kosu  vector.kosu
examples/mini-std/Cstd/: str.kosu
examples/mini-std/Fs/: file.kosu  openOption.kosu
lib/: ast.ml  asthelper.ml  astpp.ml  cli.ml  dune  lexer.mll  parser.mly  typecheck.ml  util.ml
lib/backend/: arm.ml  armspe.ml  codegen.ml  common.ml  compil.ml  dune  kosuBackend.ml  x86.ml
lib/backend/aarch64/: aarch64Codegen.ml  aarch64Conv.ml  aarch64Core.ml  aarch64Pprint.ml  dune
lib/backend/architecture/aarch64/: aarch64AsmSpec.ml  aarch64AsmSpecImpl.ml  aarch64Conv.ml  (+4 more)
lib/backend/asmSpec/: asmSpec.ml  dune
lib/backend/asmspec/: asmspec.ml
lib/backend/common/: common.ml  dune  namingConvention.ml
lib/backend/kosuCommon/: dune  function.ml  kosuCommon.ml  namingConvention.ml
lib/backend/ldSpec/: ldSpec.ml
lib/backend/x86_64/: dune  x86_64Codegen.ml  x86_64Conv.ml  x86_64Core.ml  x86_64Pprint.ml
lib/commandline/: cli.ml  cliCore.ml  commit_hash.sh  dune  kosuCfgSubc.ml  kosuCli.ml  kosuClis.ml  kosuRepl.ml  kosucCli.ml
lib/commandline/cliCommon/: .gitignore  cliCommon.ml  configure.ml  dune  kosuConfig.ml  variable.ml
lib/commandline/cliKosu/: cliKosu.ml  dune  kosuCfgSubc.ml  kosuRepl.ml  kosuRun.ml
lib/commandline/cliKosubc/: cliKosubc.ml  dune
lib/commandline/cliKosuc/: cliKosuc.ml  dune
lib/commandline/kosuCli/: dune  kosuCfgSubc.ml  kosuCli.ml  kosuRepl.ml
lib/commandline/kosucCli/: dune  kosucCli.ml
lib/commandline/kosucbcCli/: dune  kosucbcCli.ml
lib/commandline/kosurunCli/: dune  kosurunCli.ml
lib/configure/: configure.ml  dune
lib/frontend/: ast.ml  asthelper.ml  asttyped.ml  astvalidation.ml  dune  kosuFrontend.ml  kosuParser.ml  lexer.mll  lexerError.ml  parser.messages  parser.mly  position.ml  pprint.ml  pprinterr.ml  registerexn.ml  typecheck.ml  util.ml
lib/interpreter/: dune  kosuInterpreter.ml
lib/interpreter/kosuRepl/: dune  kosuRepl.ml
lib/interpreter/kosurunFront/: dune  kosurunAst.ml  kosurunFront.ml  kosurunLexer.mll  kosurunParser.mly
lib/ir/: astconvert.ml  asttpprint.ml  asttyped.ml  dune
lib/ir/kosuIrCfg/: astcfgconv.ml  astcfgpprint.ml  asttaccfg.ml  dune
lib/ir/kosutac/: asttac.ml  asttacconv.ml  asttachelper.ml  asttacpprint.ml  dune
lib/ir/kosutyped/: astconvert.ml  asttpprint.ml  asttyconvert.ml  asttyhelper.ml  asttyped.ml  asttypprint.ml  asttysizeof.ml  dune  kosuIrTyped.ml
lib/kosu-vm/: camlVm.ml  dune  kosuVirtualMachine.ml
lib/kosu-vm/config/: dune
lib/kosu-vm/core/: instructions.txt  kosuvm.c  kosuvm.h  kosuvm_base.c  kosuvm_base.h  kosuvm_pp.c  kosuvm_pp.h  kosuvm_util.c  kosuvm_util.h  stack.c  stack.h  util.c  vm.c  vm.h  vm_base.h
lib/kosu-vm/core-binding/: core_binding.c
lib/kosu_diagnostic/: Severity.ml  dune  kosuDiagnostic.ml  log.ml  report.ml
lib/kosu_frontend/: dune  kosu.ml  kosuAst.ml  kosuBaseAst.ml  kosuEnv.ml  kosuError.ml  kosuExpression.ml  kosuFrontendAlt.ml  kosuLexer.mll  kosuParser.messages  kosuParser.mly  kosuParsing.ml  kosuPrint.ml  kosuReport.ml  kosuStaticExpression.ml  kosuType.ml  kosuTypeConstraint.ml  kosuTypechecking.ml  kosuUtil.ml  kosuValidation.ml  position.ml
lib/kosu_ir/closu/: dune
lib/kosu_ir/csu/: dune
lib/kosu_ir/czu/: dune
lib/kosu_ir/monosu/: dune
lib/kosu_ir/tysu/: dune  kosuTysu.ml  kosuTysuBase.ml  tysu.ml  tysuAst.ml  tysuBase.ml  tysuError.ml  tysuType.ml  tysuTypechking.ml  tysuUtil.ml
lib/kosu_ir/tyzu/: dune  kosuTyzu.ml  tyzuAst.ml  tyzuBase.ml  tyzuType.ml
lib/kosu_misc/: dune  exitCode.ml  handledFile.ml  kosuMisc.ml
lib/kosu_virtual_machine/c_virtual_machine/: dune
lib/kosu_virtual_machine/c_virtual_machine/config/: discover.ml
lib/kosu_virtual_machine/c_virtual_machine/core/: instructions.txt  kosuvm.c  kosuvm.h  kosuvm_base.c  kosuvm_base.h  kosuvm_pp.c  kosuvm_pp.h  kosuvm_util.c  kosuvm_util.h  util.h
lib/kosu_virtual_machine/c_virtual_machine/core-binding/: core_binding.c
lib/kosu_virtual_machine/caml_bindings/: dune  kosuVirtualMachine.ml  kosuVmType.ml
lib/util/: args.ml  checksum.ml  dune  io.ml  occurence.ml  operator.ml  pkgConfig.ml  position.ml  ulist.ml  util.ml
lib/util/osInfo/: dune  osInfo.c  osInfo.ml
man/: dune
src/: dune
src/runtime/: build.sh  version.sh
src/runtime/include/: memory.h  s8.h  u8.h
src/runtime/src/: memory.c  s8.c  u8.c
src/std/: u8.kosu
test/: dune  kosu_lang.ml
test/files/: readme.kosu  test_addr.kosu  test_arith.kosu  test_array.kosu  test_char.kosu  test_cmp.kosu  test_deref.kosu  test_enumtag.kosu  test_float.kosu  test_lazylogic.kosu  test_list.kosu  test_lvfield.kosu  test_nest.kosu  test_order.kosu  test_while.kosu
test/freebsd/x86_64/: dune  readme.t  syscall.kosu  test_addr.t  test_arith.t  test_array.t  test_char.t  test_cmp.t  test_deref.t  test_enumtag.t  test_float.t  test_lazylogic.t  test_list.t  test_lvfield.t  test_nest.t  test_order.t  test_syscall.t  test_while.t
test/linux/x86_64/: dune  readme.t  syscall.kosu  test_addr.t  test_arith.t  test_array.t  test_char.t  test_cmp.t  test_deref.t  test_enumtag.t  test_float.t  test_lazylogic.t  test_list.t  test_lvfield.t  test_nest.t  test_order.t  test_syscall.t  test_while.t
test/macosx/arm64/: dune  readme.t  run.t  test_addr.t  test_arith.t  test_array.t  test_char.t  test_cmp.t  test_deref.t  test_enumtag.t  test_float.t  test_lazylogic.t  test_list.t  test_lvfield.t  test_nest.t  test_order.t  test_syscall.t  test_while.t
test/macosx/x86_64/: dune  readme.t  syscall.kosu  test_addr.t  test_arith.t  test_array.t  test_char.t  test_cmp.t  test_deref.t  test_enumtag.t  test_float.t  test_lazylogic.t  test_list.t  test_lvfield.t  test_nest.t  test_order.t  test_syscall.t  test_while.t
(+118 files in other folders)
