;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Kosu                                                                  *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Kosu is free software: you can redistribute it and/or modify it under the terms            *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Kosu is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;          *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Kosu.         *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(rule
 (with-stdout-to
  kosuc.1
  (run %{bin:kosuc} --help=groff)))

(install
 (section man)
 (files kosuc.1))

(rule
 (with-stdout-to
  kosu.1
  (run %{bin:kosu} --help=groff)))

(install
 (section man)
 (files kosu.1))

(rule
 (with-stdout-to
  kosu-cfg.1
  (run %{bin:kosu} cfg --help=groff)))

(install
 (section man)
 (files kosu-cfg.1))

(rule
 (with-stdout-to
  kosu-repl.1
  (run %{bin:kosu} repl --help=groff)))

(install
 (section man)
 (files kosu-repl.1))

(rule 
  (with-stdout-to 
    kosuc.bc.1
   (run %{bin:kosuc.bc} --help=groff)
  ))

(install
 (section man)
 (files kosuc.bc.1))