;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Kosu                                                                  *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Kosu is free software: you can redistribute it and/or modify it under the terms            *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Kosu is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;          *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Kosu.         *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(include_subdirs no)

(data_only_dirs runtime)


(rule
 (deps (source_tree runtime))
 (targets version.txt)

  (action 
   (with-stdout-to %{targets} 
  (run sh runtime/version.sh %{project_root}))
  )
 )

(rule
 (targets libkosu.a)
 (deps
  (source_tree runtime))
 (action
  (no-infer
   (progn
    (chdir
     runtime
     (run sh build.sh))
    (copy runtime/libkosu.a libkosu.a)))))

(install
 (section lib)
 (files
  (glob_files_rec std/*.kosu)))

(install
 (section lib)
 (files
  (glob_files_rec
   (runtime/include/*.h with_prefix include/))))

(install
 (section lib)
 (files
  (libkosu.a as lib/libkosu.%{read:version.txt}.a)))
