(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --table --explain)
 (infer true))

; (rule
;  (targets kosu_parser_messages.ml)
;  (deps parser.messages parser.mly)
;  (action
;   (with-stdout-to
;    %{targets}
;    (run menhir --compile-errors %{deps}))))

(library
 (name kosuFrontend)
 (libraries menhirLib util))
