;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Kosu                                                                  *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Kosu is free software: you can redistribute it and/or modify it under the terms            *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Kosu is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;          *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Kosu.         *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(include_subdirs unqualified)

(rule
 (targets cflags_libffi.sexp clibrary_flags_libffi.sexp)
 (action
  (run ./config/discover.exe)))

(library
 (name cVirtualMachine)
 (install_c_headers kosuvm)
 (foreign_stubs
  (language c)
  (names core_binding util kosuvm_base kosuvm_pp kosuvm_util kosuvm)
  (flags
   (-Wall)
   (-std=c99)
   (-fPIC)
   (:include cflags_libffi.sexp)))
 (c_library_flags
  (:include clibrary_flags_libffi.sexp)))
